--- a/vignettes/dasper.Rmd
+++ b/vignettes/dasper.Rmd
@@ -33,22 +33,18 @@ knitr::opts_chunk$set(
 startTime <- Sys.time()
 
 ## Bib setup
-library("knitcitations")
-
-## Load knitcitations with a clean bibliography
-cleanbib()
-cite_options(hyperlink = "to.doc", citation_format = "text", style = "html")
+library("RefManageR")
 
 ## Write bibliography information
 bib <- c(
     R = citation(),
     BiocStyle = citation("BiocStyle")[1],
-    knitcitations = citation("knitcitations")[1],
     knitr = citation("knitr")[1],
     rmarkdown = citation("rmarkdown")[1],
     sessioninfo = citation("sessioninfo")[1],
     testthat = citation("testthat")[1],
-    dasper = citation("dasper")[1]
+    dasper = citation("dasper")[1],
+    RefManageR = citation("RefManageR")[1]
 )
 
 write.bibtex(bib, file = "dasper.bib")
@@ -332,17 +328,17 @@ plot_sashimi(junctions_normed,
 
 # Reproducibility
 
-The `r Biocpkg("dasper")` package `r citep(bib[["dasper"]])` was made possible thanks to:
+The `r Biocpkg("dasper")` package `r Citep(bib[["dasper"]])` was made possible thanks to:
 
--   R `r citep(bib[["R"]])`
--   `r Biocpkg("BiocStyle")` `r citep(bib[["BiocStyle"]])`
--   `r CRANpkg("knitcitations")` `r citep(bib[["knitcitations"]])`
--   `r CRANpkg("knitr")` `r citep(bib[["knitr"]])`
--   `r CRANpkg("rmarkdown")` `r citep(bib[["rmarkdown"]])`
--   `r CRANpkg("sessioninfo")` `r citep(bib[["sessioninfo"]])`
--   `r CRANpkg("testthat")` `r citep(bib[["testthat"]])`
+-   R `r Citep(bib[["R"]])`
+-   `r Biocpkg("BiocStyle")` `r Citep(bib[["BiocStyle"]])`
+-   `r CRANpkg("RefManageR")` `r Citep(bib[["RefManageR"]])`
+-   `r CRANpkg("knitr")` `r Citep(bib[["knitr"]])`
+-   `r CRANpkg("rmarkdown")` `r Citep(bib[["rmarkdown"]])`
+-   `r CRANpkg("sessioninfo")` `r Citep(bib[["sessioninfo"]])`
+-   `r CRANpkg("testthat")` `r Citep(bib[["testthat"]])`
 
-This package was developed using `r BiocStyle::Githubpkg("lcolladotor/biocthis")`.
+This package was developed using `r BiocStyle::Biocpkg("biocthis")`.
 
 Code for creating the vignette
 
@@ -354,11 +350,6 @@ system.time(render("dasper.Rmd", "BiocStyle::html_document"))
 ## Extract the R code
 library("knitr")
 knit("dasper.Rmd", tangle = TRUE)
-```
-
-```{r createVignette2}
-## Clean up
-file.remove("dasper.bib")
 ```
 
 Date the vignette was generated.
@@ -387,11 +378,11 @@ session_info()
 
 # Bibliography
 
-This vignette was generated using `r Biocpkg("BiocStyle")` `r citep(bib[["BiocStyle"]])` with `r CRANpkg("knitr")` `r citep(bib[["knitr"]])` and `r CRANpkg("rmarkdown")` `r citep(bib[["rmarkdown"]])` running behind the scenes.
+This vignette was generated using `r Biocpkg("BiocStyle")` `r Citep(bib[["BiocStyle"]])` with `r CRANpkg("knitr")` `r Citep(bib[["knitr"]])` and `r CRANpkg("rmarkdown")` `r Citep(bib[["rmarkdown"]])` running behind the scenes.
 
-Citations made with `r CRANpkg("knitcitations")` `r citep(bib[["knitcitations"]])`.
+Citations made with `r CRANpkg("RefManageR")` `r Citep(bib[["RefManageR"]])`.
 
 ```{r vignetteBiblio, results = "asis", echo = FALSE, warning = FALSE, message = FALSE}
 ## Print bibliography
-knitcitations::bibliography()
+bibliography()
 ```
