--- a/vignettes/dasper.Rmd
+++ b/vignettes/dasper.Rmd
@@ -47,7 +47,6 @@ bib <- c(
     RefManageR = citation("RefManageR")[1]
 )
 
-write.bibtex(bib, file = "dasper.bib")
 ```
 
 # Basics
@@ -384,5 +383,5 @@ Citations made with `r CRANpkg("RefManageR")` `r Citep(bib[["RefManageR"]])`.
 
 ```{r vignetteBiblio, results = "asis", echo = FALSE, warning = FALSE, message = FALSE}
 ## Print bibliography
-bibliography()
+PrintBibliography(bib, .opts = list(hyperlink = "to.doc", style = "html"))
 ```
