--- a/README.Rmd
+++ b/README.Rmd
@@ -26,7 +26,7 @@ The aim of `dasper` is to **d**etect **a**berrant **sp**licing **e**vents from *
 
 ## Installation instructions
 
-Get the latest stable `R` release from [CRAN](http://cran.r-project.org/). Then install `dasper` using from [Bioconductor](http://bioconductor.org/) the following code:
+Get the latest stable `R` release from [CRAN](http://cran.r-project.org/). Then install `dasper` from [Bioconductor](http://bioconductor.org/) using the following code:
 
 ```{r 'install', eval = FALSE}
 if (!requireNamespace("BiocManager", quietly = TRUE)) {
