--- a/README.Rmd
+++ b/README.Rmd
@@ -20,6 +20,7 @@ knitr::opts_chunk$set(
 [![R build status](https://github.com/dzhang32/dasper/workflows/R-CMD-check-bioc/badge.svg)](https://github.com/dzhang32/dasper/actions)
 [![Codecov test coverage](https://codecov.io/gh/dzhang32/dasper/branch/master/graph/badge.svg)](https://codecov.io/gh/dzhang32/dasper?branch=master)
 [![BioC status](http://www.bioconductor.org/shields/build/release/bioc/dasper.svg)](https://bioconductor.org/checkResults/release/bioc-LATEST/dasper)
+[![DOI](https://zenodo.org/badge/245168125.svg)](https://zenodo.org/badge/latestdoi/245168125)
 <!-- badges: end -->
 
 The aim of `dasper` is to **d**etect **a**berrant **sp**licing **e**vents from **R**NA-seq data. By comparing patient RNA-seq data to a set of controls, `dasper` will score each splicing event in the patient representing the degree to which that splicing event looks abnormal. For a detailed guide on the usage of `dasper`, check out the vignette [here](https://dzhang32.github.io/dasper/articles/dasper.html). 
